--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nieuwjaarafteller",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
